--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "ts-node-dev --respawn --transpileOnly --no-notify src/index.ts"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.3",
     "express": "^4.17.1",
-    "grpc": "^1.24.2"
+    "grpc": "^1.24.2",
+    "protobufjs": "^6.8.9",
+    "protos": "../protos"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/express": "^4.17.3",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
