--- a/hidra/package.json
+++ b/hidra/package.json
@@ -4,16 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "ts-node-dev --respawn --transpileOnly --no-notify src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.5.3",
     "bcryptjs": "^2.4.3",
     "grpc": "^1.24.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "protos": "../protos"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/mongoose": "^5.7.5",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
